--- a/content/ko/home/slider.html
+++ b/content/ko/home/slider.html
@@ -1,4 +1,10 @@
-
+---
+title: "슬라이더"
+type: page
+layout: blank
+show_sidebar: false
+show_toc: false
+---
 
 <!-- ✅ 임시 hover 스타일 (필요 없으면 삭제 가능) -->
 <style>
