--- a/content/ko/narbar.html
+++ b/content/ko/narbar.html
@@ -1,3 +1,5 @@
+<button class="p-2 text-gray-600 dark:text-gray-300 hover:text-sky-400 transition">
+
 <header id="site-header" class="site-header w-full z-40 bg-white dark:bg-gray-900 shadow-sm">
   <nav class="container flex items-center justify-between py-4">
     <!-- 왼쪽: 로고 -->
